; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libzpool/common/extr_kernel.c_zk_thread_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libzpool/common/extr_kernel.c_zk_thread_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@THR_DETACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @zk_thread_create(void (...)* %0, i8* %1) #0 {
  %3 = alloca void (...)*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store void (...)* %0, void (...)** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load void (...)*, void (...)** %3, align 8
  %7 = bitcast void (...)* %6 to i8* (i8*)*
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @THR_DETACHED, align 4
  %10 = call i64 @thr_create(i32 0, i32 0, i8* (i8*)* %7, i8* %8, i32 %9, i64* %5)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @VERIFY(i32 %12)
  %14 = load i64, i64* %5, align 8
  %15 = inttoptr i64 %14 to i8*
  ret i8* %15
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i64 @thr_create(i32, i32, i8* (i8*)*, i8*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
